adicionado regras pmd e feita alterações nas classes.